--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   intl: ^0.18.0
   provider: ^6.0.5
   connectivity_plus: ^3.0.2
+  timer_builder: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
